增加了redis容器
